implement shop page categories and brands display

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,13 +46,13 @@
         </div>
         <!-- Logo -->
         <div class="logo">
-          <a href="index.html"><img src="{% static 'img/core-img/logo.png' %}" alt="Logo"></a>
+          <a href="/"><img src="{% static 'img/core-img/logo.png' %}" alt="Logo"></a>
         </div>
         <!-- Amado Nav -->
         <nav class="amado-nav mb-100">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="shop.html">Shop</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/shop">Shop</a></li>
             <li><a href="product-details.html">Product</a></li>
             <li><a href="checkout.html">Checkout</a></li>
           </ul>
