--- a/static/style.css
+++ b/static/style.css
@@ -11,3 +11,24 @@
     /* ---------------------------------------
     ##### - PLACE YOUR CUSTOM CSS HERE - #####
     --------------------------------------- */
+   .wrap-fixed-height {
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
+    position: relative;
+    overflow: hidden;
+}
+
+.wrap-fixed-height .image-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.wrap-fixed-height .image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
