--- a/templates/shop/items.html
+++ b/templates/shop/items.html
@@ -5,10 +5,12 @@
     <div class="col-12 col-sm-6 col-md-12 col-xl-6">
       <div class="single-product-wrapper">
         <!-- Product Image -->
-        <div class="product-img">
+        <div class="product-img wrap-fixed-height">
+          <div class="image-container">
           <a href="/product-details/{{ item.slug }}">
           <img src={{ item.photo.url }} alt="" />
           </a>
+        </div>
         </div>
 
         <!-- Product Description -->
