--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,19 @@
-{% extends 'base.html' %} 
-{% block content %}
-{% load static %}
-<h1>Index</h1>
+{% extends 'base.html' %} {% block content %} {% load static %}
+<div class="products-catagories-area">
+  <div class="amado-pro-catagory clearfix">
+    {% for item in items %}
+    <div class="single-products-catagory clearfix">
+      <a href="item/">
+        <img src="{{item.photo.url}}" alt="" />
+        <!-- Hover Content -->
+        <div class="hover-content">
+          <div class="line"></div>
+          <p>{{item.price}}грн</p>
+          <h4>{{item.name}}</h4>
+        </div>
+      </a>
+    </div>
+    {% endfor %}
+  </div>
+</div>
 {% endblock %}
