added item template

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
           <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/shop">Shop</a></li>
-            <li><a href="product-details.html">Product</a></li>
+            <li><a href="/item">Product</a></li>
             <li><a href="checkout.html">Checkout</a></li>
           </ul>
         </nav>
