--- a/templates/base.html
+++ b/templates/base.html
@@ -51,9 +51,8 @@
         <!-- Amado Nav -->
         <nav class="amado-nav mb-100">
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/shop">Shop</a></li>
-            <li><a href="/item">Product</a></li>
+            <li><a href="/">Головна сторінка</a></li>
+            <li><a href="/shop">Магазин</a></li>
             <li><a href="checkout.html">Checkout</a></li>
           </ul>
         </nav>
@@ -61,7 +60,7 @@
         <!-- Cart Menu -->
         <div class="cart-fav-search mb-100">
           <a href="cart.html" class="cart-nav"
-            ><img src="{% static 'img/core-img/cart.png' %}" alt="Cart"> Cart <span>(0)</span></a
+            ><img src="{% static 'img/core-img/cart.png' %}" alt="Cart"> Кошик <span>(0)</span></a
           >
         </div>
         <!-- Social Button -->
@@ -126,21 +125,13 @@
                   <div class="collapse navbar-collapse" id="footerNavContent">
                     <ul class="navbar-nav ml-auto">
                       <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="index.html">Головна сторінка</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="shop.html">Shop</a>
+                        <a class="nav-link" href="shop.html">Магазин</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="product-details.html"
-                          >Product</a
-                        >
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="cart.html">Cart</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="checkout.html">Checkout</a>
+                        <a class="nav-link" href="cart.html">Кошик</a>
                       </li>
                     </ul>
                   </div>
