--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
   <div class="amado-pro-catagory clearfix">
     {% for item in items %}
     <div class="single-products-catagory clearfix">
-      <a href="item/{{item.id}}">
+      <a href="{% url 'item' slug=item.slug item_id=item.id %}">
         <img src="{{item.photo.url}}" alt="" />
         <!-- Hover Content -->
         <div class="hover-content">
