--- a/templates/shop/items.html
+++ b/templates/shop/items.html
@@ -1,51 +1,50 @@
 {% load static %}
 <div class="row">
   {% for item in items %}
-    <!-- Single Product Area -->
-    <div class="col-12 col-sm-6 col-md-12 col-xl-6">
-      <div class="single-product-wrapper">
-        <!-- Product Image -->
-        <div class="product-img">
-          <a href="/product-details/{{ item.slug }}">
-          <img src={{ item.photo.url }} alt="" />
+  <!-- Single Product Area -->
+  <div class="col-12 col-sm-6 col-md-12 col-xl-6">
+    <div class="single-product-wrapper">
+      <!-- Product Image -->
+      <div class="product-img">
+        <a href="{% url 'item' slug=item.slug item_id=item.id %}">
+          <img src="{{ item.photo.url }}" alt="" />
+        </a>
+      </div>
+
+      <!-- Product Description -->
+      <div
+        class="product-description d-flex align-items-center justify-content-between"
+      >
+        <!-- Product Meta Data -->
+        <div class="product-meta-data">
+          <div class="line"></div>
+          <p class="product-price">${{ item.price }}</p>
+          <a href="{% url 'item' slug=item.slug item_id=item.id %}">
+            <h6>{{ item.name }}</h6>
           </a>
         </div>
-
-        <!-- Product Description -->
-        <div
-          class="product-description d-flex align-items-center justify-content-between"
-        >
-          <!-- Product Meta Data -->
-          <div class="product-meta-data">
-            <div class="line"></div>
-            <p class="product-price">${{ item.price }}</p>
-            <a href="/product-details/{{ item.slug }}">
-              <h6>{{ item.name }}</h6>
-            </a>
+        <!-- Ratings & Cart -->
+        <div class="ratings-cart text-right">
+          <div class="ratings">
+            {% for star in item.stars_range %}
+            <i class="fa fa-star" aria-hidden="true"></i>
+            {% endfor %} {% for star in item.empty_stars_range %}
+            <i class="fa fa-star-o" aria-hidden="true"></i>
+            {% endfor %}
           </div>
-          <!-- Ratings & Cart -->
-          <div class="ratings-cart text-right">
-            <div class="ratings">
-              {% for star in item.stars_range %}
-                  <i class="fa fa-star" aria-hidden="true"></i>
-              {% endfor %}
-              {% for star in item.empty_stars_range %}
-                  <i class="fa fa-star-o" aria-hidden="true"></i>
-              {% endfor %}
-            </div>
-            <div class="cart">
-              <a
-                href="cart.html"
-                data-toggle="tooltip"
-                data-placement="left"
-                title="Add to Cart"
-                ><img src="{% static 'img/core-img/cart.png' %}" alt="Cart"
-              /></a>
-            </div>
+          <div class="cart">
+            <a
+              href="cart.html"
+              data-toggle="tooltip"
+              data-placement="left"
+              title="Add to Cart"
+              ><img src="{% static 'img/core-img/cart.png' %}" alt="Cart"
+            /></a>
           </div>
         </div>
       </div>
     </div>
+  </div>
   {% endfor %}
 </div>
 <div class="row">
@@ -69,4 +68,3 @@
     </nav>
   </div>
 </div>
-      
