--- a/templates/shop/items.html
+++ b/templates/shop/items.html
@@ -20,7 +20,7 @@
           <!-- Product Meta Data -->
           <div class="product-meta-data">
             <div class="line"></div>
-            <p class="product-price">${{ item.price }}</p>
+            <p class="product-price">{{ item.price }} грн</p>
             <a href="/product-details/{{ item.slug }}">
               <h6>{{ item.name }}</h6>
             </a>
