--- a/static/style.css
+++ b/static/style.css
@@ -32,3 +32,17 @@
     height: 100%;
     object-fit: cover;
 }
+
+.display-none {
+    display: none;
+}
+
+.form-check-input:checked + .form-check-label {
+    transition: 500ms;
+    color: #fbb710;
+}
+
+.widget.catagory .form-check {
+    margin-bottom: 25px;
+    color: #959595;
+}
