--- a/templates/shop/categories.html
+++ b/templates/shop/categories.html
@@ -3,16 +3,15 @@
       <h6 class="widget-title mb-30">Catagories</h6>
 
       <!--  Catagories  -->
+      <div class="widget-desc">
       <div class="catagories-menu">
-        <ul class="horizontal-catagories">
           <!-- "horizontal-catagories", class="active" for active category li-->
           {% for category in categories %}
-            {% if forloop.first %}
-              <li class="active"><a href="#">{{ category }}</a></li>
-            {% else %}
-            <li><a href="#">{{ category }}</a></li>
-            {% endif %}
+              <div class="form-check">
+                  <input class="form-check-input display-none" type="radio" name="category" value="{{ category }}" id="{{ category }}">
+                  <label class="form-check-label" for="{{ category }}">{{ category }}</label>
+              </div>
           {% endfor %}
-        </ul>
+      </div>
       </div>
 </div>
