--- a/templates/shop/price.html
+++ b/templates/shop/price.html
@@ -6,12 +6,12 @@
     <div class="widget-desc">
     <div class="slider-range">
         <div
-        data-min="10"
-        data-max="1000"
-        data-unit="$"
+        data-min="{{ smallest_price }}"
+        data-max="{{ biggest_price }}"
+        data-unit="₴"
         class="slider-range-price ui-slider ui-slider-horizontal ui-widget ui-widget-content ui-corner-all"
-        data-value-min="10"
-        data-value-max="1000"
+        data-value-min="{{ min_price }}"
+        data-value-max="{{ max_price }}"
         data-label-result=""
         >
         <div class="ui-slider-range ui-widget-header ui-corner-all"></div>
@@ -24,7 +24,9 @@
             tabindex="0"
         ></span>
         </div>
-        <div class="range-price">$10 - $1000</div>
+        <input type="hidden" name="min_price" id="min_price">
+        <input type="hidden" name="max_price" id="max_price">
+        <div class="range-price">{{ min_price }}₴ - {{ max_price }}₴</div>
     </div>
     </div>
 </div>
