--- a/templates/shop/items.html
+++ b/templates/shop/items.html
@@ -55,18 +55,17 @@
     <!-- Pagination -->
     <nav aria-label="navigation">
       <ul class="pagination justify-content-end mt-50">
-        <li class="page-item active">
-          <a class="page-link" href="#">01.</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#">02.</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#">03.</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#">04.</a>
-        </li>
+        {% for i in items.paginator.page_range %}
+          {% if items.number == i %}
+            <li class="page-item active">
+              <a class="page-link" href="?page={{ i }}">{{ i }}.</a>
+            </li>
+          {% else %}
+            <li class="page-item">
+              <a class="page-link" href="?page={{ i }}">{{ i }}.</a>
+            </li>
+          {% endif %}
+        {% endfor %}
       </ul>
     </nav>
   </div>
