--- a/templates/shop/topbar.html
+++ b/templates/shop/topbar.html
@@ -5,7 +5,7 @@
           >
             <!-- Total Products -->
             <div class="total-products">
-              <p>Showing 1-8 0f 25</p>
+                <p>Showing {{ items.start_index }}-{{ items.end_index }} of {{ total_items }}</p>
             </div>
             <!-- Sorting -->
             <div class="product-sorting d-flex">
@@ -21,12 +21,14 @@
               </div>
               <div class="view-product d-flex align-items-center">
                 <p>View</p>
-                <form action="#" method="get">
-                  <select name="select" id="viewProduct">
-                    <option value="value">12</option>
-                    <option value="value">24</option>
-                    <option value="value">48</option>
-                    <option value="value">96</option>
+                  <form action="{% url 'shop' %}" method="get" id="itemsPerPageForm">
+                  <select name="items_per_page" id="viewProduct" onchange="this.form.submit()">
+                      <option value="2" {% if items_per_page == '2' %}selected{% endif %}>2</option>
+                      <option value="5" {% if items_per_page == '5' %}selected{% endif %}>5</option>
+                      <option value="12" {% if items_per_page == '12' %}selected{% endif %}>12</option>
+                      <option value="24" {% if items_per_page == '24' %}selected{% endif %}>24</option>
+                      <option value="48" {% if items_per_page == '48' %}selected{% endif %}>48</option>
+                      <option value="96" {% if items_per_page == '96' %}selected{% endif %}>96</option>
                   </select>
                 </form>
               </div>
