sort by in shop implemented

--- a/templates/shop.html
+++ b/templates/shop.html
@@ -16,6 +16,7 @@
     <div class="container-fluid">
       {% include 'shop/topbar.html' %}
       {% include 'shop/items.html' %}
+      {% include 'shop/pagination.html'%}
     </div>
 </div>
 {% endblock %}
