--- a/templates/shop/items.html
+++ b/templates/shop/items.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load shop_filter %}
 <div class="row">
   {% for item in items %}
     <!-- Single Product Area -->
@@ -28,13 +29,13 @@
           <!-- Ratings & Cart -->
           <div class="ratings-cart text-right">
             <div class="ratings">
-              {% for star in item.stars_range %}
-                  <i class="fa fa-star" aria-hidden="true"></i>
-              {% endfor %}
-              {% for star in item.empty_stars_range %}
-                  <i class="fa fa-star-o" aria-hidden="true"></i>
-              {% endfor %}
-            </div>
+                {% for star in item.stars|to_range %}
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                {% endfor %}
+                {% for star in item.stars|subtract_from_five|to_range %}
+                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                {% endfor %}
+          </div>
             <div class="cart">
               <a
                 href="cart.html"
