--- a/templates/shop/brands.html
+++ b/templates/shop/brands.html
@@ -5,7 +5,7 @@
     <div class="widget-desc">
     {% for brand in brands %}
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="brand" value="{{ brand }}" id="{{ brand }}">
+            <input class="form-check-input" type="checkbox" name="brand" value="{{ brand.slug }}" id="{{ brand }}">
             <label class="form-check-label" for="{{ brand }}">{{ brand }}</label>
         </div>
     {% endfor %}
