--- a/templates/shop/topbar.html
+++ b/templates/shop/topbar.html
@@ -11,8 +11,8 @@
             <div class="product-sorting d-flex">
               <div class="sort-by-date d-flex align-items-center mr-15">
                 <p>Sort by</p>
-                <form action="{% url 'shop' %}" method="get">
-                  <select name="select" id="sortBydate" onchange="this.form.submit()">
+                <form method="get">
+                  <select name="select" id="sort-by-date" onchange="submitFormWithFilterParams(this.form)">
                       <option value="price" {% if sort_by == 'price' %}selected{% endif %}>Price</option>
                       <option value="newest" {% if sort_by == 'newest' %}selected{% endif %}>Newest</option>
                       <option value="popular" {% if sort_by == 'popular' %}selected{% endif %}>Popular</option>
@@ -22,8 +22,8 @@
               </div>
               <div class="view-product d-flex align-items-center">
                 <p>View</p>
-                  <form action="{% url 'shop' %}" method="get" id="itemsPerPageForm">
-                  <select name="items_per_page" id="viewProduct" onchange="this.form.submit()">
+                  <form method="get" id="items-per-page-form">
+                  <select name="items_per_page" id="viewProduct" onchange="submitFormWithFilterParams(this.form)">
                       <option value="2" {% if items_per_page == '2' %}selected{% endif %}>2</option>
                       <option value="5" {% if items_per_page == '5' %}selected{% endif %}>5</option>
                       <option value="12" {% if items_per_page == '12' %}selected{% endif %}>12</option>
