--- a/templates/shop/brands.html
+++ b/templates/shop/brands.html
@@ -3,10 +3,10 @@
     <h6 class="widget-title mb-30">Brands</h6>
 
     <div class="widget-desc">
-    {% for brand in brands %}
+    {% for checkbox in filter_form.brands %}
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="brand" value="{{ brand.slug }}" id="{{ brand }}">
-            <label class="form-check-label" for="{{ brand }}">{{ brand }}</label>
+            {{ checkbox.tag }}
+            <label class="form-check-label" for="{{ checkbox.id_for_label }}">{{ checkbox.choice_label }}</label>
         </div>
     {% endfor %}
     </div>
