--- a/templates/item.html
+++ b/templates/item.html
@@ -73,9 +73,7 @@
             <div class="cart-btn d-flex mb-50">
               <p>Qty</p>
               <div class="quantity">
-                <span
-                  class="qty-minus"
-                  onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty ) &amp;&amp; qty &gt; 1 ) effect.value--;return false;"
+                <span class="qty-minus" onclick="decreaseQuantity()"
                   ><i class="fa fa-caret-down" aria-hidden="true"></i
                 ></span>
                 <input
@@ -86,11 +84,11 @@
                   min="1"
                   max="300"
                   name="quantity"
+                  oninput="updateQuantity()"
                   value="1"
+                  readonly
                 />
-                <span
-                  class="qty-plus"
-                  onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty )) effect.value++;return false;"
+                <span class="qty-plus" onclick="increaseQuantity()"
                   ><i class="fa fa-caret-up" aria-hidden="true"></i
                 ></span>
               </div>
@@ -98,8 +96,9 @@
             <button
               type="submit"
               name="addtocart"
-              value="5"
+              value="{{item.id}}"
               class="btn amado-btn"
+              id="add-button"
             >
               Додати у кошик
             </button>
