--- a/templates/item.html
+++ b/templates/item.html
@@ -88,9 +88,10 @@
                   value="1"
                   readonly
                 />
-                <span class="qty-plus" onclick="increaseQuantity()"
-                  ><i class="fa fa-caret-up" aria-hidden="true"></i
-                ></span>
+                <span class="qty-plus" onclick="increaseQuantity()">
+                  <i class="fa fa-caret-up" aria-hidden="true">
+                  </i>
+                </span>
               </div>
             </div>
             <button
