--- a/templates/cart/cart_summary.html
+++ b/templates/cart/cart_summary.html
@@ -3,7 +3,7 @@
 <div class="cart-table-area section-padding-100">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-12 col-lg-8">
+      <div class="col-12 col-lg-9">
         <div class="cart-title mt-50">
           <h2>Кошик</h2>
         </div>
@@ -20,9 +20,9 @@
             </thead>
             <tbody>
               {% for item_cart in cart %} {% with item=item_cart.item %}
-              <tr>
+              <tr data-index="{{item.id}}" class="this-item">
                 <td class="cart_product_img">
-                  <a href="#"
+                  <a href="{% url 'item' slug=item.slug item_id=item.id %}"
                     ><img src="{{ item.photo.url }}" alt="Product"
                   /></a>
                 </td>
@@ -32,29 +32,50 @@
                 <td class="price">
                   <span>{{ item.price }} грн</span>
                 </td>
-                <td class="qty">
+                <td class="qty" id="select{{item.id}}">
                   <div class="qty-btn d-flex">
-                    <p>Qty</p>
                     <div class="quantity">
-                      <span class="qty-minus" onclick="decreaseQuantity()"
-                        ><i class="fa fa-caret-down" aria-hidden="true"></i
-                      ></span>
+                      <span
+                        class="qty-minus"
+                        onclick="decreaseQuantityConcret('{{ item.id }}')"
+                      >
+                        <i class="fa fa-caret-down" aria-hidden="true"></i>
+                      </span>
                       <input
                         type="number"
                         class="qty-text"
-                        id="qty"
+                        id="qty-{{ item.id }}"
                         step="1"
                         min="1"
                         max="300"
                         name="quantity"
-                        oninput="updateQuantity()"
+                        oninput="updateQuantityConcret('{{ item.id }}')"
                         value="{{ item_cart.qty }}"
                         readonly
                       />
-                      <span class="qty-plus" onclick="increaseQuantity()">
-                        <i class="fa fa-caret-up" aria-hidden="true"> </i>
+                      <span
+                        class="qty-plus"
+                        onclick="increaseQuantityConcret('{{ item.id }}')"
+                      >
+                        <i class="fa fa-caret-up" aria-hidden="true"></i>
                       </span>
                     </div>
+                    <button
+                      type="button"
+                      id="update-button"
+                      data-index="{{item.id}}"
+                      class="btn btn-outline-secondary btn-sm update-button"
+                    >
+                      Update
+                    </button>
+                    <button
+                      type="button"
+                      id="delete-button"
+                      data-index="{{item.id}}"
+                      class="btn btn-outline-secondary btn-sm delete-button"
+                    >
+                      Delete
+                    </button>
                   </div>
                 </td>
               </tr>
@@ -63,12 +84,13 @@
           </table>
         </div>
       </div>
-      <div class="col-12 col-lg-4">
+      <div class="col-11 col-lg-3">
         <div class="cart-summary">
           <h5>Підсумок</h5>
           <ul class="summary-table">
             <li>
-              <span>Всього:</span> <span>{{cart.get_total_price}} грн</span>
+              <span>Всього:</span>
+              <span id="subtotal">{{cart.get_total_price}} грн</span>
             </li>
           </ul>
           <div class="cart-btn mt-100">
