--- a/templates/item.html
+++ b/templates/item.html
@@ -82,15 +82,14 @@
                   id="qty"
                   step="1"
                   min="1"
-                  max="300"
+                  max="10"
                   name="quantity"
                   oninput="updateQuantity()"
                   value="1"
                   readonly
                 />
                 <span class="qty-plus" onclick="increaseQuantity()">
-                  <i class="fa fa-caret-up" aria-hidden="true">
-                  </i>
+                  <i class="fa fa-caret-up" aria-hidden="true"> </i>
                 </span>
               </div>
             </div>
