--- a/templates/item.html
+++ b/templates/item.html
@@ -67,12 +67,24 @@
           <div class="short_overview my-5">
             <p>{{item.description}}</p>
           </div>
+          {% for item_cart in cart %} {% if item_cart.item.id == item.id %}
+          <div class="d-flex align-items-center my-4">
+            <div class="short_overview">У кошику: &nbsp;</div>
+
+            <span id="item-qty-status">
+              {% for item_cart in cart %} {% if item_cart.item.id == item.id %}
+              {{ item_cart.qty }} {% endif %} {% endfor %}
+            </span>
+            <div class="short_overview">&nbsp; шт</div>
+          </div>
+          {% endif %}{% endfor %}
 
           <!-- Add to Cart Form -->
           <form class="cart clearfix" method="post">
             <div class="cart-btn d-flex mb-50">
               <p>Qty</p>
-              <div class="quantity">
+
+              <div class="quantity not_added_to_cart">
                 <span class="qty-minus" onclick="decreaseQuantity()"
                   ><i class="fa fa-caret-down" aria-hidden="true"></i
                 ></span>
@@ -93,6 +105,7 @@
                 </span>
               </div>
             </div>
+            {% if item.in_stock %}
             <button
               type="submit"
               name="addtocart"
@@ -102,6 +115,7 @@
             >
               Додати у кошик
             </button>
+            {% else %} {% endif %}
           </form>
         </div>
       </div>
