--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
           <ul>
             <li><a href="/">Головна сторінка</a></li>
             <li><a href="/shop">Магазин</a></li>
-            <li><a href="checkout.html">Checkout</a></li>
+            <li><a href="/checkout">Checkout</a></li>
           </ul>
         </nav>
 
