--- a/templates/cart/cart_summary.html
+++ b/templates/cart/cart_summary.html
@@ -94,7 +94,7 @@
             </li>
           </ul>
           <div class="cart-btn mt-100">
-            <a href="cart.html" class="btn amado-btn w-100">Checkout</a>
+            <a href="/checkout" class="btn amado-btn w-100">Checkout</a>
           </div>
         </div>
       </div>
