--- a/static/style.css
+++ b/static/style.css
@@ -46,3 +46,21 @@
     margin-bottom: 25px;
     color: #959595;
 }
+
+.scrollable-select {
+     margin-bottom: 10px;
+     margin-top: 10px;
+}
+
+.message-in-middle {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 40px;
+    bottom: 40px;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
