--- a/templates/order_success.html
+++ b/templates/order_success.html
@@ -4,6 +4,6 @@
 <div class="message-in-middle">
     <h1>Order Created Successfully!</h1>
     <p>Thank you for your order. Our manager will contact you soon</p>
-    <button class="btn amado-btn"><a href="{% url 'shop' %}">Back to shop</a></button>
+    <a href="{% url 'shop' %}" class="btn amado-btn">Back to shop</a>
 </div>
 {% endblock %}
