--- a/templates/shop.html
+++ b/templates/shop.html
@@ -10,7 +10,7 @@
           <input type="hidden" name="items_per_page" value="{{ items_per_page }}">
           <input type="hidden" name="select" value="{{ sort_by }}">
         <div class="amado-btn-group mt-30 mb-100">
-          <button type="submit" class="btn amado-btn mb-15">Find</button>
+          <button type="submit" class="btn amado-btn mb-15">Знайти</button>
         </div>
       </form>
 </div>
