--- a/templates/shop/price.html
+++ b/templates/shop/price.html
@@ -1,6 +1,6 @@
 <div class="widget price mb-50">
     <!-- Widget Title -->
-    <h6 class="widget-title mb-30">Price</h6>
+    <h6 class="widget-title mb-30">Ціна</h6>
 
     <div class="widget-desc">
     <div class="slider-range">
