--- a/templates/checkout/form_inputs.html
+++ b/templates/checkout/form_inputs.html
@@ -1,7 +1,7 @@
 <div class="col-12 col-lg-8">
     <div class="checkout_details_area mt-50 clearfix">
         <div class="cart-title">
-            <h2>Checkout</h2>
+            <h2>Замовити</h2>
         </div>
             <div class="row">
                 <div class="col-md-6 mb-3">
