--- a/templates/shop/brands.html
+++ b/templates/shop/brands.html
@@ -1,6 +1,6 @@
 <div class="widget brands mb-50">
     <!-- Widget Title -->
-    <h6 class="widget-title mb-30">Brands</h6>
+    <h6 class="widget-title mb-30">Бренди</h6>
 
     <div class="widget-desc">
     {% for checkbox in filter_form.brands %}
