--- a/templates/shop.html
+++ b/templates/shop.html
@@ -8,7 +8,7 @@
       {% include 'shop/price.html'%}
         <!-- Button Group -->
           <input type="hidden" name="items_per_page" value="{{ items_per_page }}">
-          <input type="hidden" name="select" value="{{ sort_by }}">
+          <input type="hidden" name="sort_by" value="{{ sort_by }}">
         <div class="amado-btn-group mt-30 mb-100">
           <button type="submit" class="btn amado-btn mb-15">Знайти</button>
         </div>
