--- a/templates/shop/topbar.html
+++ b/templates/shop/topbar.html
@@ -12,7 +12,7 @@
             <div class="product-sorting d-flex">
               <div class="sort-by-date d-flex align-items-center mr-15">
                   <p>Сортувати</p>
-                  {{ topbar_form.select }}
+                  {{ topbar_form.sort_by }}
               </div>
               <div class="view-product d-flex align-items-center">
                   <p>Показувати</p>
