--- a/templates/shop/pagination.html
+++ b/templates/shop/pagination.html
@@ -6,11 +6,11 @@
         {% for i in items.paginator.page_range %}
           {% if items.number == i %}
             <li class="page-item active">
-              <a class="page-link" href="?page={{ i }}&select={{ sort_by }}&items_per_page={{ items_per_page }}{% for brand in last_selected_brands %}&brands={{ brand }}{% endfor %}{% if request.GET.category %}&category={{ request.GET.category }}{% endif %}{% if request.GET.min_price %}&min_price={{ request.GET.min_price }}{% endif %}{% if request.GET.max_price %}&max_price={{ request.GET.max_price }}{% endif %}">{{ i }}.</a>
+              <a class="page-link" href="?page={{ i }}&sort_by={{ sort_by }}&items_per_page={{ items_per_page }}{% for brand in last_selected_brands %}&brands={{ brand }}{% endfor %}{% if request.GET.category %}&category={{ request.GET.category }}{% endif %}{% if request.GET.min_price %}&min_price={{ request.GET.min_price }}{% endif %}{% if request.GET.max_price %}&max_price={{ request.GET.max_price }}{% endif %}">{{ i }}.</a>
             </li>
           {% else %}
             <li class="page-item">
-              <a class="page-link" href="?page={{ i }}&select={{ sort_by }}&items_per_page={{ items_per_page }}{% for brand in last_selected_brands %}&brands={{ brand }}{% endfor %}{% if request.GET.category %}&category={{ request.GET.category }}{% endif %}{% if request.GET.min_price %}&min_price={{ request.GET.min_price }}{% endif %}{% if request.GET.max_price %}&max_price={{ request.GET.max_price }}{% endif %}">{{ i }}.</a>
+              <a class="page-link" href="?page={{ i }}&sort_by={{ sort_by }}&items_per_page={{ items_per_page }}{% for brand in last_selected_brands %}&brands={{ brand }}{% endfor %}{% if request.GET.category %}&category={{ request.GET.category }}{% endif %}{% if request.GET.min_price %}&min_price={{ request.GET.min_price }}{% endif %}{% if request.GET.max_price %}&max_price={{ request.GET.max_price }}{% endif %}">{{ i }}.</a>
             </li>
           {% endif %}
         {% endfor %}
